# ar-guidebook

./: .gitignore  README.md  compose.yaml
.github/workflows/: ci.yml  deploy.yml  ios.yml  monitor.yml
admin/: README.md  config.js  index.html  package.json  server.mjs  styles.css
admin/src/: api.js  app.js  drafts.js  format.js  trace.js
admin/test/: api.test.mjs
backend/: Cargo.toml  Dockerfile  README.md
backend/migrations/: 0001_initial.sql  0002_add_location_elevation.sql  0003_add_ar_calibration_captures.sql  0004_add_calibration_review.sql  0005_add_offline_pack_versions.sql  0006_add_archived_entities.sql
backend/src/: auth.rs  db.rs  main.rs  models.rs  repository.rs  seed.rs
docs/: architecture.md  deployment.md  field-recording.md  field-testing.md  milestones.md  production-readiness.md
ios/ClimbAR/: ClimbARApp.swift  Info.plist
ios/ClimbAR.xcodeproj/: project.pbxproj
ios/ClimbAR/AR/: RouteARView.swift
ios/ClimbAR/Models/: AROverlayModels.swift  GuideModels.swift
ios/ClimbAR/Services/: ClimbARAPI.swift  LocationService.swift  OfflinePackStore.swift  RouteProximityService.swift
ios/ClimbAR/Views/: AreaDetailView.swift  AreaListView.swift  RouteDetailView.swift  RouteSearchView.swift  WallDetailView.swift
scripts/: db-backup.sh  db-restore.sh
